test/Fail/Issue3355.err

Issue3355.agda:7.1-28: warning: -W[no]InvalidNoPositivityCheckPragma
NO_POSITIVITY_CHECKING pragmas can only precede a data/record
definition or a mutual block (that contains a data/record
definition).

Issue3355.agda:52.5-32: warning: -W[no]InvalidNoPositivityCheckPragma
NO_POSITIVITY_CHECKING pragmas can only precede a data/record
definition or a mutual block (that contains a data/record
definition).
when scope checking the declaration
  where3 = Set
    where
      mutual
        record R : Set where
          inductive
          field f : R → R
        {-# NO_POSITIVITY_CHECK #-}
        bar = Set
Issue3355.agda:8.1-13.20: error: [NotStrictlyPositive]
R is not strictly positive, because it occurs
to the left of an arrow
in the definition of R.

Issue3355.agda:45.1-53.14: error: [NotStrictlyPositive]
R is not strictly positive, because it occurs
to the left of an arrow
in the definition of R.

Issue3355.agda:106.3-123.24: error: [NotStrictlyPositive]
R is not strictly positive, because it occurs
to the left of an arrow
in the definition of R.

Issue3355.agda:106.3-123.24: error: [NotStrictlyPositive]
R' is not strictly positive, because it occurs
to the left of an arrow
in the definition of R'.
